# voicium

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
docs/: ubuntu-advanced-architecture.md  ubuntu-mvp-plan.md  ubuntu-release-candidate.md
resources/systemd/: voicium.service
scripts/: build-deb.sh
src/voicium/: __init__.py  __main__.py  audio.py  backend.py  cli.py  config.py  daemon.py  healthcheck.py  history.py  paste.py  postprocess.py  transcription.py
tests/: test_audio.py  test_backend.py  test_cli.py  test_config.py  test_daemon.py  test_healthcheck.py  test_history.py  test_paste.py  test_postprocess.py  test_transcription.py
