[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voicium"
version = "0.1.0"
description = "Fast Russian push-to-talk dictation for Ubuntu."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Ruslan" },
]
dependencies = [
  "evdev>=1.7.0",
]

[project.optional-dependencies]
transformers = [
  "accelerate>=0.24.0",
  "huggingface-hub>=0.23.0",
  "protobuf>=3.20.0",
  "sentencepiece>=0.1.99",
  "torch>=2.0.0",
  "transformers>=4.35.0",
]

[project.scripts]
voicium = "voicium.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voicium"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers --strict-config"
